--- a/server/package.json
+++ b/server/package.json
@@ -4,19 +4,28 @@
   "main": "index.js",
   "author": "Nikolla_L",
   "license": "MIT",
+  "scripts": {
+    "start": "nodemon ./src/app.ts",
+    "build": "tsc"
+  },
   "dependencies": {
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "express": "^4.19.2",
     "reflect-metadata": "^0.2.2",
-    "routing-controllers": "^0.10.4"
+    "routing-controllers": "^0.10.4",
+    "ts-node": "^10.9.2"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.5",
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.7",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "cross-env": "^7.0.3",
     "nodemon": "^3.1.0",
     "tsconfig-paths": "^4.2.0",
-    "tslib": "^2.6.2"
+    "tslib": "^2.6.2",
+    "typescript": "^5.4.5"
   }
 }
