--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "format": "prettier --write \"src/**/*.vue\"",
+    "lint": "eslint \"src/**/*.vue\""
   },
   "dependencies": {
     "core-js": "^3.8.3",
@@ -18,13 +19,17 @@
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
     "@babel/preset-typescript": "^7.24.1",
+    "@eslint/js": "^9.0.0",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-plugin-typescript": "^5.0.8",
     "@vue/cli-service": "~5.0.0",
     "@vue/compiler-sfc": "^3.4.23",
-    "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint": "^9.0.0",
+    "eslint-plugin-vue": "^9.25.0",
+    "globals": "^15.0.0",
+    "prettier": "3.2.5",
+    "typescript-eslint": "^7.7.0"
   },
   "eslintConfig": {
     "root": true,
