--- a/client/package.json
+++ b/client/package.json
@@ -5,8 +5,9 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "format": "prettier --write \"src/**/*.vue\"",
-    "lint": "eslint \"src/**/*.vue\""
+    "lint": "eslint --ext .ts,.vue src",
+    "format": "prettier --write 'src/**/*.{js,ts,vue}'",
+    "lint-and-format": "yarn lint && yarn format"
   },
   "dependencies": {
     "core-js": "^3.8.3",
@@ -17,34 +18,17 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
-    "@babel/eslint-parser": "^7.12.16",
     "@babel/preset-typescript": "^7.24.1",
-    "@eslint/js": "^9.0.0",
+    "@typescript-eslint/eslint-plugin": "^7.7.0",
+    "@typescript-eslint/parser": "^7.7.0",
     "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-plugin-typescript": "^5.0.8",
     "@vue/cli-service": "~5.0.0",
     "@vue/compiler-sfc": "^3.4.23",
     "eslint": "^9.0.0",
     "eslint-plugin-vue": "^9.25.0",
     "globals": "^15.0.0",
-    "prettier": "3.2.5",
-    "typescript-eslint": "^7.7.0"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/vue3-essential",
-      "eslint:recommended"
-    ],
-    "parserOptions": {
-      "parser": "@babel/eslint-parser",
-      "requireConfigFile": false
-    },
-    "rules": {}
+    "prettier": "3.2.5"
   },
   "browserslist": [
     "> 1%",
