--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "eslint --ext .ts,.vue src",
+    "lint": "eslint 'src/**/*.{js,ts,vue}'",
     "format": "prettier --write 'src/**/*.{js,ts,vue}'",
     "lint-and-format": "yarn lint && yarn format"
   },
@@ -19,16 +19,18 @@
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/preset-typescript": "^7.24.1",
+    "@eslint/js": "^9.1.1",
     "@typescript-eslint/eslint-plugin": "^7.7.0",
     "@typescript-eslint/parser": "^7.7.0",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-typescript": "^5.0.8",
     "@vue/cli-service": "~5.0.0",
     "@vue/compiler-sfc": "^3.4.23",
-    "eslint": "^9.0.0",
+    "eslint": "^9.1.1",
     "eslint-plugin-vue": "^9.25.0",
     "globals": "^15.0.0",
-    "prettier": "3.2.5"
+    "prettier": "3.2.5",
+    "typescript-eslint": "^7.7.1"
   },
   "browserslist": [
     "> 1%",
