--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,10 @@
   "license": "MIT",
   "scripts": {
     "start": "nodemon ./src/app.ts",
-    "build": "tsc"
+    "build": "tsc",
+    "lint": "eslint **/*.ts",
+    "format": "prettier --write \"src/**/*.{ts,tsx,js,jsx}\"",
+    "lint-and-format": "yarn lint && yarn format"
   },
   "dependencies": {
     "body-parser": "^1.20.2",
@@ -14,18 +17,28 @@
     "express": "^4.19.2",
     "reflect-metadata": "^0.2.2",
     "routing-controllers": "^0.10.4",
+    "swagger-ui-express": "^5.0.0",
     "ts-node": "^10.9.2"
   },
   "devDependencies": {
+    "@eslint/js": "^9.1.1",
     "@types/body-parser": "^1.19.5",
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.7",
+    "@typescript-eslint/eslint-plugin": "^7.7.1",
+    "@typescript-eslint/parser": "^7.7.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cross-env": "^7.0.3",
+    "eslint": "^9.1.1",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "globals": "^15.0.0",
     "nodemon": "^3.1.0",
+    "prettier": "^3.2.5",
     "tsconfig-paths": "^4.2.0",
     "tslib": "^2.6.2",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "typescript-eslint": "^7.7.1"
   }
 }
