--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,8 @@
     "build": "tsc",
     "lint": "eslint **/*.ts",
     "format": "prettier --write \"src/**/*.{ts,tsx,js,jsx}\"",
-    "lint-and-format": "yarn lint && yarn format"
+    "lint-and-format": "yarn lint && yarn format",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "body-parser": "^1.20.2",
