--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,27 +1,22 @@
 {
 	"compilerOptions": {
-		"target": "es2018",
+		"lib": ["ESNext"],
+		"target": "ES2020",
 		"module": "commonjs",
-		"lib": ["es2018"],
-		"skipLibCheck": true,
-		"sourceMap": true,
-		"outDir": "./dist",
 		"moduleResolution": "node",
-		"removeComments": true,
-		"noImplicitAny": true,
-		"strictNullChecks": true,
-		"strictFunctionTypes": true,
-		"noImplicitThis": true,
-		"noUnusedLocals": false,
-		"noUnusedParameters": false,
-		"noImplicitReturns": true,
-		"noFallthroughCasesInSwitch": true,
-		"allowSyntheticDefaultImports": true,
 		"esModuleInterop": true,
-		"emitDecoratorMetadata": true,
 		"experimentalDecorators": true,
-		"resolveJsonModule": true,
-		"baseUrl": "."
+		"emitDecoratorMetadata": true,
+		"removeComments": true,
+		"sourceMap": true,
+		"strict": true,
+		"noImplicitAny": true,
+		"types": ["node", "reflect-metadata"],
+		"exactOptionalPropertyTypes": false,
+		"skipDefaultLibCheck": true,
+		"skipLibCheck": true,
+		"strictPropertyInitialization": true,
+		"noImplicitReturns": true
 	},
 	"exclude": [
 		"node_modules"
