--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -12,6 +12,7 @@
       "sourceMap": true,
       "baseUrl": ".",
       "types": ["webpack-env"],
+      "lib": ["esnext", "dom", "dom.iterable", "scripthost"],
       "emitDecoratorMetadata": true,
       "removeComments": true,
       "noImplicitAny": true,
@@ -19,7 +20,10 @@
       "skipDefaultLibCheck": true,
       "skipLibCheck": true,
       "strictPropertyInitialization": true,
-      "noImplicitReturns": true
+      "noImplicitReturns": true,
+      "paths": {
+        "@/*": ["./src/*"],
+      },
     },
     "include": [
       "src/**/*"
