--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ecwid-store-server",
+  "name": "store-server",
   "version": "1.0.0",
   "main": "index.js",
   "author": "Nikolla_L",
@@ -14,22 +14,26 @@
   },
   "dependencies": {
     "body-parser": "^1.20.2",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "node-fetch": "^3.3.2",
+    "openapi3-ts": "^4.3.1",
     "reflect-metadata": "^0.2.2",
     "routing-controllers": "^0.10.4",
-    "swagger-ui-express": "^5.0.0",
-    "ts-node": "^10.9.2"
+    "routing-controllers-openapi": "^4.0.0",
+    "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.1.1",
     "@types/body-parser": "^1.19.5",
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.7",
+    "@types/swagger-ui-express": "^4.1.6",
     "@typescript-eslint/eslint-plugin": "^7.7.1",
     "@typescript-eslint/parser": "^7.7.1",
-    "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.1",
     "cross-env": "^7.0.3",
     "eslint": "^9.1.1",
     "eslint-config-prettier": "^9.1.0",
@@ -37,6 +41,7 @@
     "globals": "^15.0.0",
     "nodemon": "^3.1.0",
     "prettier": "^3.2.5",
+    "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "tslib": "^2.6.2",
     "typescript": "^5.4.5",
