--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,9 +36,9 @@ jobs:
     - name: Lint and formatting for client
       run: |
         cd client
-        yarn run lint-and-check
+        yarn run check
 
     - name: Lint and formatting for server
       run: |
         cd server
-        yarn run lint-and-check
+        yarn run check
