--- a/server/package.json
+++ b/server/package.json
@@ -9,8 +9,8 @@
     "build": "tsc",
     "lint": "eslint **/*.ts",
     "format": "prettier --write \"src/**/*.{ts,tsx,js,jsx}\"",
-    "lint-and-format": "yarn lint && yarn format",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "check": "npm run typecheck && npm run lint && npm run format"
   },
   "dependencies": {
     "body-parser": "^1.20.2",
