--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,7 @@
     "lint": "eslint **/*.ts",
     "format": "prettier --write \"src/**/*.{ts,tsx,js,jsx}\"",
     "typecheck": "tsc --noEmit",
-    "check": "npm run typecheck && npm run lint && npm run format"
+    "full-check": "npm run typecheck && npm run lint && npm run format"
   },
   "dependencies": {
     "body-parser": "^1.20.2",
