--- a/server/package.json
+++ b/server/package.json
@@ -21,7 +21,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "inversify": "^6.0.2",
-    "node-fetch": "^3.3.2",
+    "node-fetch": "2",
     "openapi3-ts": "^4.3.1",
     "reflect-metadata": "^0.2.2",
     "routing-controllers": "^0.10.4",
@@ -33,6 +33,7 @@
     "@types/body-parser": "^1.19.5",
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.7",
+    "@types/node-fetch": "^2.6.11",
     "@types/swagger-ui-express": "^4.1.6",
     "@typescript-eslint/eslint-plugin": "^7.7.1",
     "@typescript-eslint/parser": "^7.7.1",
