--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -18,6 +18,7 @@
 		"strictPropertyInitialization": true,
 		"noImplicitReturns": true,
 		"noUnusedLocals": true,   
+		"noImplicitThis": true,
 		"outDir": "./dist",
 		"rootDir": "./src",
 	},
