--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "inversify": "^6.0.2",
+    "moment": "^2.30.1",
     "node-fetch": "2",
     "openapi3-ts": "^4.3.1",
     "reflect-metadata": "^0.2.2",
