--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "nodemon ./src/app.ts",
     "build": "tsc",
-    "lint": "eslint **/*.ts",
+    "lint": "eslint src/**/*.ts",
     "format": "prettier --write \"src/**/*.{ts,tsx,js,jsx}\"",
     "typecheck": "tsc --noEmit",
     "full-check": "npm run typecheck && npm run lint && npm run format"
@@ -30,18 +30,14 @@
     "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.1.1",
     "@types/body-parser": "^1.19.5",
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.7",
     "@types/node-fetch": "^2.6.11",
     "@types/swagger-ui-express": "^4.1.6",
-    "@typescript-eslint/eslint-plugin": "^7.7.1",
-    "@typescript-eslint/parser": "^7.7.1",
+    "@typescript-eslint/eslint-plugin": "^6.18.1",
+    "@typescript-eslint/parser": "^6.18.1",
     "cross-env": "^7.0.3",
-    "eslint": "^9.1.1",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.1.3",
     "globals": "^15.0.0",
     "nodemon": "^3.1.0",
     "prettier": "^3.2.5",
@@ -49,6 +45,7 @@
     "tsconfig-paths": "^4.2.0",
     "tslib": "^2.6.2",
     "typescript": "^5.4.5",
-    "typescript-eslint": "^7.7.1"
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0"
   }
 }
