--- a/server/package.json
+++ b/server/package.json
@@ -38,14 +38,14 @@
     "@typescript-eslint/eslint-plugin": "^6.18.1",
     "@typescript-eslint/parser": "^6.18.1",
     "cross-env": "^7.0.3",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
     "globals": "^15.0.0",
     "nodemon": "^3.1.0",
     "prettier": "^3.2.5",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "tslib": "^2.6.2",
-    "typescript": "^5.4.5",
-    "eslint": "^8.56.0",
-    "eslint-config-prettier": "^9.1.0"
+    "typescript": "^5.4.5"
   }
 }
