--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,9 @@
     "typescript": "^5.4.5",
     "vue": "^3.2.13",
     "vue-class-component": "^7.2.6",
-    "vue-property-decorator": "^9.1.2"
+    "vue-property-decorator": "^9.1.2",
+    "vue-router": "4",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
