--- a/server/package.json
+++ b/server/package.json
@@ -5,8 +5,8 @@
   "author": "Nikolla_L",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon ./src/app.ts",
-    "start:prod": "node ./dist/app.js",
+    "start:dev": "nodemon ./src/app.ts",
+    "start": "node ./dist/app.js",
     "build": "tsc",
     "lint": "eslint src/**/*.ts",
     "format": "prettier --write \"src/**/*.{ts,tsx,js,jsx}\"",
