--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,8 @@
     "full-check": "npm run lint && npm run format"
   },
   "dependencies": {
+    "@types/axios": "^0.14.0",
+    "axios": "^1.6.8",
     "core-js": "^3.8.3",
     "typescript": "^5.4.5",
     "vue": "^3.2.13",
