--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -11,7 +11,8 @@
       "allowSyntheticDefaultImports": true,
       "sourceMap": true,
       "baseUrl": ".",
-      "types": ["webpack-env"],
+      "types": ["node"],
+      "typeRoots": ["node_modules/@types"],
       "lib": ["esnext", "dom", "dom.iterable", "scripthost"],
       "emitDecoratorMetadata": true,
       "removeComments": true,
