--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "@babel/core": "^7.12.16",
     "@babel/preset-typescript": "^7.24.1",
     "@eslint/js": "^9.1.1",
+    "@types/node": "^20.12.8",
     "@typescript-eslint/eslint-plugin": "^7.7.0",
     "@typescript-eslint/parser": "^7.7.0",
     "@vue/cli-plugin-babel": "~5.0.0",
